# tcgplayerscraper

./: .gitignore  CLAUDE.md  README.md  RUN.md  analyze_tcg.py  catalog.py  clean_tcg_data.py  dev.sh  find_product_ids.py  pokemon_all_products.py  products.txt  products.txt.example  proxies.txt.example  pyproject.toml  report.txt  scrape.bat  scraper2.py  scrapereport.py  scraperpdf.py  settings.py  web.py
templates/: base.html  dashboard.html  logs.html  manage.html  product_detail.html  schedules.html  settings.html
